Fix controls hit area too small in some cases

--- a/src/scss/skin-modern/_skin-smallscreen.scss
+++ b/src/scss/skin-modern/_skin-smallscreen.scss
@@ -23,6 +23,8 @@
     }
 
     .#{$prefix}-ui-closebutton {
+      padding-top: 3em;
+      padding-right: 3em;
       margin: 2em;
       position: absolute;
       right: 0;
