--- a/src/scss/skin-modern/components/_button.scss
+++ b/src/scss/skin-modern/components/_button.scss
@@ -4,17 +4,20 @@
   @extend %ui-component;
 
   background-color: transparent;
-  background-origin: content-box;
+  background-origin: padding-box;
   background-position: center;
   background-repeat: no-repeat;
   background-size: 1.5em;
   border: 0;
-  box-sizing: content-box;
+  box-sizing: padding-box;
   cursor: pointer;
   font-size: 1em;
   height: 1.5em;
   min-width: 1.5em;
-  padding: .25em;
+  padding-right: 0.5em;
+  padding-left: 0.5em;
+  padding-bottom: 1.5em;
+  padding-top: 1.5em;
 
   .#{$prefix}-label {
     color: $color-primary;
